cut word with RMM

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,7 @@
 				</ul>
 				</li>
                 <li id="keywords-page-url"><a href="{{ url_for('keywords') }}">关键词工具</a></li>
-                <li id="extends-page-url"><a href="{{ url_for('extends') }}">扩展问题工具</a></li>
+                <!-- <li id="extends-page-url"><a href="{{ url_for('extends') }}">扩展问题工具</a></li> -->
                 <li id="segment-url"><a href="{{ url_for('segment') }}">分词工具</a></li>
                 <li id="dialog-url"><a href="{{ url_for('dialog') }}">对话测试</a></li>
                 <li id="about-url"><a href="{{ url_for('index') }}">About</a></li>
