--- a/app/templates/base.bak.html
+++ b/app/templates/base.bak.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -30,19 +30,30 @@
             <a class="navbar-brand" href="{{ url_for('index') }}">客服知识库</a>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li id="knowledges-page-url"><a href="{{ url_for('knowledges') }}">标准问题</a></li>
-                <li id="expands-page-url"><a href="{{ url_for('expands') }}">扩展问题</a></li>
-                <li id="keywords-page-url"><a href="{{ url_for('keywords') }}">关键字</a></li>
-                <li id="search-url"><a href="{{ url_for('search') }}">搜索问题</a></li>
-                <li id="add-url"><a href="{{ url_for('add') }}">增加问题</a></li>
+            <ul class="nav navbar-nav ">
+                <li id="knowledges-page-url" class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">标准问题工具 <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="{{ url_for('knowledges') }}">浏览</a></li>
+						<li><a href="{{ url_for('knowledge_view') }}">View</a></li>
+						<li><a href="{{ url_for('knowledge_search') }}">查找</a></li>
+						<li><a href="{{ url_for('knowledge_add') }}">增加</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="{{ url_for('knowledge_edit') }}">修改</a></li>
+						<li><a href="{{ url_for('knowledge_delete') }}">删除</a></li>
+				</ul>
+				</li>
+                <li id="keywords-page-url"><a href="{{ url_for('keywords') }}">关键词工具</a></li>
+                <li id="extends-page-url"><a href="{{ url_for('extends') }}">扩展问题工具</a></li>
+                <li id="segment-url"><a href="{{ url_for('segment') }}">分词工具</a></li>
                 <li id="dialog-url"><a href="{{ url_for('dialog') }}">对话测试</a></li>
-                <li id="about-url"><a href="#about">About</a></li>
+                <li id="about-url"><a href="{{ url_for('index') }}">About</a></li>
+				<button type="button" class="btn btn-default navbar-btn">Sign in</button>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </div>
-<div class="container">
+<div class="container-fluid">
     {% block body %}{% endblock %}
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -51,7 +62,6 @@
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript">
       {% block js %}{% endblock %}
-
 
 
 
