--- a/kbase/templates/add.html
+++ b/kbase/templates/add.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <br>
-<form class="form-horizontal">
+<form class="form-horizontal" action="{{ url_for('add') }}" method="post">
     <div class="form-group">
         <label for="question" class="col-md-2 control-label">标准问题:</label>
         <div class="col-md-5">
