update QA module

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
                 <li id="keywords-page-url"><a href="{{ url_for('keywords') }}">关键词工具</a></li>
                 <!-- <li id="extends-page-url"><a href="{{ url_for('extends') }}">扩展问题工具</a></li> -->
                 <li id="segment-url"><a href="{{ url_for('segment') }}">分词工具</a></li>
-                <li id="dialog-url"><a href="{{ url_for('dialog') }}">对话测试</a></li>
+                <li id="qa-url"><a href="{{ url_for('qa') }}">问答测试</a></li>
                 <li id="about-url"><a href="{{ url_for('index') }}">About</a></li>
 				<button type="button" class="btn btn-default navbar-btn">Sign in</button>
             </ul>
