--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <br>
-<div class="text-center"><h1>基于知识库的在线客服对话系统 Ver 0.1</h1>
+<div class="text-center"><h1>基于知识库的智能电力客服问答系统 Ver 0.1</h1>
 </div>
 {% endblock %}
 
